syntax = "proto2";

option java_package = "protocol";

option java_outer_classname = "ResourceProtos";

import "enums.proto";

message ResourceAllocation
{
    required ResourceCount resources = 1;
    required ColourProto playerColour = 2;
}

message ResourceCount
{
    optional int32 brick = 1;
    optional int32 lumber = 2;
    optional int32 wool = 3;
    optional int32 grain = 4;
    optional int32 ore = 5;
}
